--- a/Proyecto-Angular/src/app/components/contacto/contacto-modal/contacto-modal.component.html
+++ b/Proyecto-Angular/src/app/components/contacto/contacto-modal/contacto-modal.component.html
@@ -6,7 +6,7 @@ id="titulo-contacto-modal" tabindex="-1"
 aria-labelledby="textoModalLabel"
 aria-hidden="true"
 >
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document" (click)="resetearTitulo()">
         <div class="modal-content">
             <div class="modal-header justify-content-center">
                 <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título</h3>                        
@@ -32,7 +32,6 @@ aria-hidden="true"
                         type="button" 
                         class="btn btn-danger"                            
                         data-bs-dismiss="modal"
-                        (click)="resetearTitulo()" 
                         >
                         Cerrar
                     </button>
@@ -58,7 +57,7 @@ id="contacto-modal" tabindex="-1"
 aria-labelledby="textoModalLabel"
 aria-hidden="true"
 >
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document" (click)="resetearForm()">
         <div class="modal-content">
             <div class="modal-header justify-content-center">
                 <h3 class="modal-title textoModal" id="textoModalLabel">Editar Información de Contacto</h3>                        
@@ -141,7 +140,6 @@ aria-hidden="true"
                             type="button" 
                             class="btn btn-danger"                            
                             data-bs-dismiss="modal"
-                            (click)="resetearInputs(); toggleBtnContacto()" 
                             >
                             Cerrar
                         </button>
