--- a/Proyecto-Angular/src/app/components/contacto/contacto.component.html
+++ b/Proyecto-Angular/src/app/components/contacto/contacto.component.html
@@ -130,15 +130,15 @@
                 
                 <div>                    
                     <label>Ubicación</label>                                       
-                    <p #ubicacion>{{ubicacion}}</p>
+                    <p #ubicacion>{{ubicacionContacto}}</p>
                 </div>
                 <div class="my-4">
                     <label>Teléfono</label>                    
-                    <p #telefono >{{telefono}}</p>                   
+                    <p #telefono >{{telefonoContacto}}</p>                   
                 </div>
                 <div class="my-4">
                     <label>Correo</label>
-                    <p #correo >{{correo}}</p>
+                    <p #correo >{{correoContacto}}</p>
                 </div>
             </div>
 
