--- a/Proyecto-Angular/src/app/components/footer/footer.component.html
+++ b/Proyecto-Angular/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>  
+<footer style="padding-top: 20px;">  
     <div class="d-flex align-items-center justify-content-center gap-4 mb-2" id="container-iconos">                
         <a title="Seguime en Instagram" class="link-redes" target="_blank" href="https://www.instagram.com/julianmeneses1/">
             <img src="../assets/Instagram.png">
