--- a/Proyecto-Angular/src/app/components/proyectos/proyectos-modal/proyectos-modal.component.html
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos-modal/proyectos-modal.component.html
@@ -8,7 +8,7 @@
   aria-labelledby="textoModalLabel"
   aria-hidden="true"
   >
-      <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-dialog modal-dialog-centered" role="document" (click)="resetearTitulo()">
           <div class="modal-content">
               <div class="modal-header justify-content-center">
                   <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título</h3>                        
@@ -32,7 +32,6 @@
                           type="button" 
                           class="btn btn-danger"                            
                           data-bs-dismiss="modal"
-                          (click)="resetearTitulo()"
                           >
                           Cerrar
                       </button>
@@ -58,7 +57,7 @@
   aria-labelledby="textoModalLabel"
   aria-hidden="true"
   >
-      <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-dialog modal-dialog-centered" role="document" (click)="resetearForm()">
           <div class="modal-content">
               <div class="modal-header justify-content-center modal-body-div">
                   <h3 class="modal-title textoModal text-center" id="textoModalLabel">Añadir Proyecto</h3>                        
@@ -178,7 +177,6 @@
                               type="button" 
                               class="btn btn-danger"                            
                               data-bs-dismiss="modal"
-                              (click)="resetearInputs(); toggleBtnProyecto()"
                               >
                               Cerrar
                           </button>
