--- a/Proyecto-Angular/src/app/components/proyectos/proyectos.component.html
+++ b/Proyecto-Angular/src/app/components/proyectos/proyectos.component.html
@@ -5,7 +5,7 @@
           <div>
               <fa-icon 
                   [icon]="faPlus" 
-                
+                  *ngIf="modoEdicion" 
                   data-bs-toggle="modal" 
                   data-bs-target="#proyecto-modal">
               </fa-icon> 
