--- a/Proyecto-Angular/src/app/components/acercademi/acerca-de-mi-modal/acerca-de-mi-modal.component.html
+++ b/Proyecto-Angular/src/app/components/acercademi/acerca-de-mi-modal/acerca-de-mi-modal.component.html
@@ -7,7 +7,7 @@
     aria-labelledby="textoModalLabel"
     aria-hidden="true"
     >
-        <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-dialog modal-dialog-centered" role="document" (click)="resetearTexto()">
             <div class="modal-content">
                 <div class="modal-header justify-content-center">
                     <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título y Texto</h3>                        
@@ -44,7 +44,6 @@
                             type="button" 
                             class="btn btn-danger"                            
                             data-bs-dismiss="modal"
-                            (click)="resetearInputs()"
                             >
                             Cerrar
                         </button>
