--- a/Proyecto-Angular/src/app/components/conocimientos/conocimientos-modal/conocimientos-modal.component.html
+++ b/Proyecto-Angular/src/app/components/conocimientos/conocimientos-modal/conocimientos-modal.component.html
@@ -6,7 +6,7 @@ id="titulo-conocimiento-modal" tabindex="-1"
 aria-labelledby="textoModalLabel"
 aria-hidden="true"
 >
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document" (click)="resetearTitulo()">
         <div class="modal-content">
             <div class="modal-header justify-content-center">
                 <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título</h3>                        
@@ -31,7 +31,6 @@ aria-hidden="true"
                         type="button" 
                         class="btn btn-danger"                            
                         data-bs-dismiss="modal"
-                        (click)="resetearTitulo()"
                         >
                         Cerrar
                     </button>
@@ -57,7 +56,7 @@ id="conocimiento-modal" tabindex="-1"
 aria-labelledby="textoModalLabel"
 aria-hidden="true"
 >
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered" role="document" (click)="resetearForm()">
         <div class="modal-content">
             <div class="modal-header justify-content-center">
                 <h3 class="modal-title textoModal" id="textoModalLabel">Añadir Conocimiento</h3>                        
@@ -127,7 +126,6 @@ aria-hidden="true"
                             type="button" 
                             class="btn btn-danger"                            
                             data-bs-dismiss="modal"
-                            (click)="resetearInputs(); toggleBtnConocimientos()"
                             >
                             Cerrar
                         </button>
