--- a/Proyecto-Angular/src/app/components/acercademi/acerca-de-mi-modal/acerca-de-mi-modal.component.html
+++ b/Proyecto-Angular/src/app/components/acercademi/acerca-de-mi-modal/acerca-de-mi-modal.component.html
@@ -1,62 +1,76 @@
 
     <!-- MODAL TÍTULO Y TEXTO -->
 
-    <div 
-    class="modal fade modal-lg"      
-    id="acercademi-modal" tabindex="-1" 
-    aria-labelledby="textoModalLabel"
-    aria-hidden="true"
-    >
-        <div class="modal-dialog modal-dialog-centered" role="document" (click)="resetearTexto()">
-            <div class="modal-content">
-                <div class="modal-header justify-content-center">
-                    <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título y Texto</h3>                        
-                </div>
-                <div class="modal-body">                                 
-                    <div class="d-flex modal-body-div">
-                        <label for="user" class="form-label etiquetaModal ">Título actual</label>
-                        <p class="inputModal" id="titulo">{{titulo}}</p>                    
+    <form (ngSubmit)="onSubmit()" [formGroup]="formularioAcercaDeMi">
+        <div 
+        class="modal fade modal-lg"      
+        id="acerca-de-mi-modal" tabindex="-1" 
+        aria-labelledby="textoModalLabel"
+        aria-hidden="true"
+        >
+            <div class="modal-dialog modal-dialog-centered" role="document" (click)="resetearForm()">
+                <div class="modal-content">
+                    <div class="modal-header justify-content-center">
+                        <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título y Texto</h3>                        
                     </div>
-                    <div class="d-flex align-items-baseline mb-3 modal-body-div">
-                        <label for="user" class="form-label etiquetaModal">Nuevo título</label>
-                        <input 
-                            #nuevoTitulo 
-                            type="text" 
-                            class="form-control inputModal" 
-                            placeholder="Ingrese nuevo título"
-                            maxlength="30">
-                    </div> 
-                    <div class="d-flex align-items-baseline  modal-body-div">
-                        <label for="user" class="form-label etiquetaModal">Texto actual</label>
-                        <p class="textoModal inputModal2">{{texto}}</p>                                       
-                    </div>
-                    <div class="d-flex align-items-center mb-1 modal-body-div">
-                        <label for="user" class="form-label etiquetaModal">Nuevo texto</label>
-                        <textarea
-                            #nuevoTexto 
-                            maxlength="300"           
-                            class="form-control inputModal2" 
-                            placeholder="Ingrese nuevo texto"></textarea> 
-                    </div>                
-                    
-                    <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
-                        <button 
-                            type="button" 
-                            class="btn btn-danger"                            
-                            data-bs-dismiss="modal"
-                            >
-                            Cerrar
-                        </button>
-                        <button 
-                            type="button" 
-                            class="btn btn-primary"                                                      
-                            data-bs-dismiss="modal"
-                            (click)="cambiarTexto()"                           
-                            >
-                            Aceptar
-                        </button>
+                    <div class="modal-body">                                 
+                        <div class="mb-3">
+                            <div class="d-flex modal-body-div align-items-baseline">
+                                <label for="user" class="form-label etiquetaModal ">Título</label>
+                                <input 
+                                    #nuevoTitulo
+                                    [value]="titulo" 
+                                    type="text" 
+                                    class="form-control inputModal" 
+                                    placeholder="Ingrese nuevo título"
+                                    maxlength="30"
+                                    formControlName="titulo"
+                                    [ngClass]="{'is-invalid':formularioInvalido && formularioAcercaDeMi.get('titulo')?.errors?.['required']}"
+                                    (click)="ocultarMensajeError()">                   
+                            </div>
+                            <p 
+                                class="text-danger" 
+                                *ngIf="formularioInvalido && formularioAcercaDeMi.get('titulo')?.errors?.['required']">
+                                Este campo es obligatorio
+                            </p>
+                        </div>                         
+                        <div class="mb-3">
+                            <div class="d-flex align-items-baseline modal-body-div">
+                                <label for="user" class="form-label etiquetaModal">Texto</label>
+                                <textarea
+                                    #nuevoTexto                                     
+                                    maxlength="300"
+                                    formControlName="texto"           
+                                    class="form-control inputModal2" 
+                                    placeholder="Ingrese nuevo texto"
+                                    [ngClass]="{'is-invalid':formularioInvalido && formularioAcercaDeMi.get('texto')?.errors?.['required']}"
+                                    (click)="ocultarMensajeError()">{{texto}}</textarea>                                       
+                            </div>
+                            <p 
+                                class="text-danger" 
+                                *ngIf="formularioInvalido && formularioAcercaDeMi.get('texto')?.errors?.['required']">
+                                Este campo es obligatorio
+                            </p>
+                        </div>                                    
+                        
+                        <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
+                            <button 
+                                type="button" 
+                                class="btn btn-danger"                            
+                                data-bs-dismiss="modal"
+                                >
+                                Cerrar
+                            </button>
+                            <button 
+                                type="submit" 
+                                class="btn btn-primary"                                                                             
+                                >
+                                Aceptar
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+        
+    </form>
