--- a/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
+++ b/Proyecto-Angular/src/app/components/acercademi/acercademi.component.html
@@ -6,7 +6,7 @@
                     *ngIf="modoEdicion" 
                     [icon]="faSquarePen"
                     data-bs-toggle="modal" 
-                    data-bs-target="#acercademi-modal">
+                    data-bs-target="#acerca-de-mi-modal">
             </fa-icon> 
         </div>        
         <div data-aos="fade-up" data-aos-duration="800" data-aos-easing="ease-in-out">
