--- a/Proyecto-Angular/src/app/components/banner/banner-modal/banner-modal.component.html
+++ b/Proyecto-Angular/src/app/components/banner/banner-modal/banner-modal.component.html
@@ -27,12 +27,12 @@
                             formControlName="banner"
                             (click)="ocultarMensajeError()">
                         <label class="textoModal">{{nombreArchivo}}</label>             
-                    </div>
-                    <div 
-                        class="mensajeErrorFormularios alert alert-danger" 
+                    </div>                   
+                    <p 
+                        class="text-danger" 
                         *ngIf="formularioInvalido && formularioBanner.get('banner')?.errors?.['required']">
                         Este campo es obligatorio
-                    </div> 
+                    </p> 
                     <img *ngIf="previsualizacionImagen" class="imagenEdicion mb-1" [src]="previsualizacionImagen">
                     <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
                         <button 
@@ -52,55 +52,3 @@
         </div>
     </div>   
 </form>
-<!-- MODAL TÍTULO y SUBTÍTULO -->
-
-<div 
-    class="modal fade modal-lg"     
-    id="textoModal" tabindex="-1" 
-    aria-labelledby="textoModalLabel"
-    aria-hidden="true"
->
-    <div class="modal-dialog modal-dialog-centered" role="document" (click)="resetearTexto()">
-        <div class="modal-content">
-            <div class="modal-header justify-content-center">
-                <h3 class="modal-title textoModal" id="textoModalLabel">Editar Título y Subtítulo</h3>                        
-            </div>
-            <div class="modal-body">                                 
-                <div class="d-flex modal-body-div">
-                    <label for="user" class="form-label etiquetaModal">Título actual</label>
-                    <p class="inputModal">{{titulo}}</p>                    
-                </div>
-                <div class="d-flex align-items-baseline mb-3 modal-body-div">
-                    <label for="user" class="form-label etiquetaModal">Nuevo título</label>
-                    <input type="text" #nuevoTitulo class="form-control inputModal" maxlength="20" placeholder="Ingrese nuevo título">
-                </div> 
-                <div class="d-flex align-items-baseline modal-body-div">
-                    <label for="user" class="form-label etiquetaModal">Subtítulo actual</label>
-                    <p class="textoModal inputModal">{{subtitulo}}</p>                                       
-                </div>
-                <div class="d-flex align-items-baseline mb-1 modal-body-div">
-                    <label for="user" class="form-label etiquetaModal">Nuevo subtítulo</label>
-                    <input type="text" #nuevoSubtitulo class="form-control inputModal" placeholder="Ingrese nuevo subtítulo"  maxlength="35">
-                </div>                
-                
-                <div class="modal-footer d-flex justify-content-between pt-2 pe-0 pb-0 ps-0">
-                    <button 
-                        type="button" 
-                        class="btn btn-danger"                        
-                        data-bs-dismiss="modal"
-                        >
-                        Cerrar
-                    </button>
-                    <button 
-                        type="button" 
-                        class="btn btn-primary"                                                   
-                        data-bs-dismiss="modal"
-                        (click)="cambiarTexto()"
-                        >
-                        Aceptar
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
