--- a/Proyecto-Angular/src/styles.css
+++ b/Proyecto-Angular/src/styles.css
@@ -45,7 +45,8 @@ footer {
 
 .etiquetaModal2, .inputModal2 {
     overflow: auto;
-    max-height: 60px;
+    height: 100px;   
+    max-height: 150px;
     width: 70%;
 }
 
