renombramiento banner modal imagen banner

--- a/Proyecto-Angular/src/app/components/banner/banner.component.html
+++ b/Proyecto-Angular/src/app/components/banner/banner.component.html
@@ -60,9 +60,9 @@
         </button>      
     </div>
 </div>
-<app-banner-modal    
+<app-banner-modal-imagen-banner    
     (modificarBanner)="cambiarBanner($event)">
-</app-banner-modal>
+</app-banner-modal-imagen-banner>
 <app-banner-modal-imagen-perfil
     (modificarFotoPerfil)="cambiarFotoPerfil($event)">
 </app-banner-modal-imagen-perfil>
